--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "since 2017-06"
   ],
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.9",
+    "postcss": "^8.2.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-speech-kit": "^3.0.1",
     "tailwindcss": "^2.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.2",
-    "eslint": "^7.23.0",
+    "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
