--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8.2.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-speech-kit": "^3.0.1",
     "tailwindcss": "^2.1.1"
   },
