--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/utils": "^4.11.2",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
     "react-speech-kit": "^3.0.1",
+    "react-to-pdf": "0.0.13",
     "tailwindcss": "^2.1.1"
   },
   "devDependencies": {
