--- a/package.json
+++ b/package.json
@@ -19,15 +19,24 @@
     "since 2017-06"
   ],
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/core": "^4.9.10",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.49",
     "@material-ui/utils": "^4.11.2",
+    "@react-google-maps/api": "^2.1.1",
+    "antd": "^4.15.1",
     "autoprefixer": "^10.2.5",
+    "bootstrap": "^4.6.0",
+    "google-map-react": "^2.1.9",
     "postcss": "^8.2.10",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-geocode": "^0.2.3",
+    "react-google-autocomplete": "^1.3.0",
+    "react-google-maps": "^9.4.5",
     "react-html-parser": "^2.0.2",
+    "react-router-dom": "^5.2.0",
     "react-speech-kit": "^3.0.1",
     "react-to-pdf": "0.0.13",
     "styled-components": "^5.2.3",
@@ -45,7 +54,7 @@
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
-    "vite": "^2.1.5"
+    "vite": "^2.2.1"
   },
   "husky": {
     "hooks": {
