--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
+    "react-router-dom": "^5.2.0",
     "react-speech-kit": "^3.0.1",
     "react-to-pdf": "0.0.13",
     "tailwindcss": "^2.1.1"
