--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/utils": "^4.11.2",
     "autoprefixer": "^10.2.5",
+    "google-map-react": "^2.1.9",
     "postcss": "^8.2.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
