--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "since 2017-06"
   ],
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/core": "^4.9.10",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.49",
     "@material-ui/utils": "^4.11.2",
     "autoprefixer": "^10.2.5",
+    "bootstrap": "^4.6.0",
     "google-map-react": "^2.1.9",
     "postcss": "^8.2.10",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.2.0",
