--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "since 2017-06"
   ],
   "dependencies": {
+    "@atomap/use-places-autocomplete": "^1.0.4",
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.49",
@@ -31,6 +32,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "react-speech-kit": "^3.0.1",
     "react-to-pdf": "0.0.13",
